[package]
name = "gustchannel"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
uuid = { version = "1.18.0", features = ["v4"] }
