[package]
name = "gustchannel"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

thiserror = "2.0.15"
uuid = { version = "1.18.0", features = ["v4"] }
axum = { version = "0.8.4", features = ["ws", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
once_cell = "1.21.3"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
parking_lot = "0.12.3"
